// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfluencePostQuery /> render with results matches snapshot - with team names 1`] = `
<span
  data-test-id="search-dialog-compass-post-query"
>
  <div
    className="search-result-section"
    data-test-id="search-result-section-services"
  >
    <SearchResultSection
      title={
        <FormattedMessage
          defaultMessage="Services"
          description="Section heading for the search flyout Services section."
          id="compass_search_dialog.compass.services_section_heading"
          values={Object {}}
        />
      }
    >
      <ProductSearchResult
        analyticContext={
          Object {
            "containerId": "none",
            "globalIndex": 0,
            "id": "2a430a73-d9e9-4bcc-a46a-51618965ffea",
            "indexWithinSection": 0,
            "isCached": false,
            "sectionId": "compass-service",
            "sectionIndex": 0,
          }
        }
        containerDetail="Optional secondary data-warehouse"
        href="https://compass.com/2a430a73-d9e9-4bcc-a46a-51618965ffea?search_id=abc"
        icon={
          <ComponentTypeIcon
            label="Parker - Ward"
            type="SERVICE"
          />
        }
        isCollapsed={false}
        key="item_https://compass.com/2a430a73-d9e9-4bcc-a46a-51618965ffea"
        owner="another team"
        screen="postQuerySearchResults"
        title="Parker - Ward"
      />
    </SearchResultSection>
  </div>
  <div
    className="search-result-section"
    data-test-id="search-result-section-appsnlibs"
  >
    <SearchResultSection
      title={
        <FormattedMessage
          defaultMessage="Libraries, Applications & More"
          description="Section heading text for the search flyout Libraries, Applications & More section."
          id="compass_search_dialog.compass.libraries_applications_more_section_heading"
          values={Object {}}
        />
      }
    >
      <ProductSearchResult
        analyticContext={
          Object {
            "containerId": "none",
            "globalIndex": 1,
            "id": "81098dee-c818-44c9-8bf7-8c1398f8e79c",
            "indexWithinSection": 0,
            "isCached": false,
            "sectionId": "compass-application",
            "sectionIndex": 1,
          }
        }
        containerDetail="Front-line executive algorithm"
        href="https://compass.com/81098dee-c818-44c9-8bf7-8c1398f8e79c?search_id=abc"
        icon={
          <ComponentTypeIcon
            label="Wintheiser LLC"
            type="APPLICATION"
          />
        }
        isCollapsed={false}
        key="item_https://compass.com/81098dee-c818-44c9-8bf7-8c1398f8e79c"
        owner="yet another team"
        screen="postQuerySearchResults"
        title="Wintheiser LLC"
      />
    </SearchResultSection>
  </div>
  <div
    className="search-result-section"
    data-test-id="search-result-section-teams"
  >
    <SearchResultSection
      title={
        <FormattedMessage
          defaultMessage="Teams & People"
          description="Section heading text for search flyout Teams & People section."
          id="compass_search_dialog.compass.teams_and_people_heading"
          values={Object {}}
        />
      }
    >
      <ProductSearchResult
        analyticContext={
          Object {
            "containerId": null,
            "globalIndex": 1,
            "id": "a805ab01-0e05-4cef-8042-cadcad480661",
            "indexWithinSection": 0,
            "isCached": false,
            "sectionId": "compass-team",
            "sectionIndex": 1,
          }
        }
        href="/compass/people/team/a805ab01-0e05-4cef-8042-cadcad480661?search_id=abc"
        icon={
          <ResultAvatar
            appearance="circle"
            borderColor="transparent"
            size="xsmall"
            src="ashlynn.net"
          />
        }
        isCollapsed={false}
        key="people_a805ab01-0e05-4cef-8042-cadcad480661"
        screen="postQuerySearchResults"
        title="Sleek Fresh Chair"
      />
    </SearchResultSection>
  </div>
  <WithAnalyticsEvents(WrappedComponent)
    isLoading={false}
    isPreQuery={false}
    resultCount={1}
    results={Array []}
    sectionCount={1}
  />
</span>
`;

exports[`<ConfluencePostQuery /> render with results matches snapshot 1`] = `
<span
  data-test-id="search-dialog-compass-post-query"
>
  <div
    className="search-result-section"
    data-test-id="search-result-section-services"
  >
    <SearchResultSection
      title={
        <FormattedMessage
          defaultMessage="Services"
          description="Section heading for the search flyout Services section."
          id="compass_search_dialog.compass.services_section_heading"
          values={Object {}}
        />
      }
    >
      <ProductSearchResult
        analyticContext={
          Object {
            "containerId": "none",
            "globalIndex": 0,
            "id": "ed82d4e5-9edf-4ec4-86f4-f733a072edb7",
            "indexWithinSection": 0,
            "isCached": false,
            "sectionId": "compass-service",
            "sectionIndex": 0,
          }
        }
        containerDetail="Quality-focused next generation knowledge user"
        href="https://compass.com/ed82d4e5-9edf-4ec4-86f4-f733a072edb7?search_id=abc"
        icon={
          <ComponentTypeIcon
            label="Klein Inc"
            type="SERVICE"
          />
        }
        isCollapsed={false}
        key="item_https://compass.com/ed82d4e5-9edf-4ec4-86f4-f733a072edb7"
        screen="postQuerySearchResults"
        title="Klein Inc"
      />
    </SearchResultSection>
  </div>
  <div
    className="search-result-section"
    data-test-id="search-result-section-appsnlibs"
  >
    <SearchResultSection
      title={
        <FormattedMessage
          defaultMessage="Libraries, Applications & More"
          description="Section heading text for the search flyout Libraries, Applications & More section."
          id="compass_search_dialog.compass.libraries_applications_more_section_heading"
          values={Object {}}
        />
      }
    >
      <ProductSearchResult
        analyticContext={
          Object {
            "containerId": "none",
            "globalIndex": 1,
            "id": "38d97d60-ec9c-4fc6-96ea-1039c01e1357",
            "indexWithinSection": 0,
            "isCached": false,
            "sectionId": "compass-other",
            "sectionIndex": 1,
          }
        }
        containerDetail="Proactive zero defect moratorium"
        href="https://compass.com/38d97d60-ec9c-4fc6-96ea-1039c01e1357?search_id=abc"
        icon={
          <ComponentTypeIcon
            label="Bergstrom - Schoen"
            type="OTHER"
          />
        }
        isCollapsed={false}
        key="item_https://compass.com/38d97d60-ec9c-4fc6-96ea-1039c01e1357"
        screen="postQuerySearchResults"
        title="Bergstrom - Schoen"
      />
    </SearchResultSection>
  </div>
  <div
    className="search-result-section"
    data-test-id="search-result-section-teams"
  >
    <SearchResultSection
      title={
        <FormattedMessage
          defaultMessage="Teams & People"
          description="Section heading text for search flyout Teams & People section."
          id="compass_search_dialog.compass.teams_and_people_heading"
          values={Object {}}
        />
      }
    >
      <ProductSearchResult
        analyticContext={
          Object {
            "containerId": null,
            "globalIndex": 1,
            "id": "8a292807-7faa-428c-9279-28a0316860c0",
            "indexWithinSection": 0,
            "isCached": false,
            "sectionId": "compass-team",
            "sectionIndex": 1,
          }
        }
        href="/compass/people/team/8a292807-7faa-428c-9279-28a0316860c0?search_id=abc"
        icon={
          <ResultAvatar
            appearance="circle"
            borderColor="transparent"
            size="xsmall"
            src="annabell.com"
          />
        }
        isCollapsed={false}
        key="people_8a292807-7faa-428c-9279-28a0316860c0"
        screen="postQuerySearchResults"
        title="Practical Frozen Sausages"
      />
    </SearchResultSection>
  </div>
  <WithAnalyticsEvents(WrappedComponent)
    isLoading={false}
    isPreQuery={false}
    resultCount={1}
    results={Array []}
    sectionCount={1}
  />
</span>
`;
